--- a/package.json
+++ b/package.json
@@ -42,14 +42,14 @@
     "@changesets/cli": "^2.27.11",
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
-    "@storybook/addon-a11y": "^8.1.0-alpha.7",
-    "@storybook/addon-actions": "^8.1.0-alpha.7",
-    "@storybook/addon-docs": "^8.1.0-alpha.7",
-    "@storybook/addon-essentials": "^8.1.0-alpha.7",
-    "@storybook/addon-links": "^8.1.0-alpha.7",
-    "@storybook/addon-viewport": "^8.1.0-alpha.7",
-    "@storybook/nextjs": "^8.1.0-alpha.7",
-    "@storybook/react": "^8.1.0-alpha.7",
+    "@storybook/addon-a11y": "^8.5.1",
+    "@storybook/addon-actions": "^8.5.1",
+    "@storybook/addon-docs": "^8.5.1",
+    "@storybook/addon-essentials": "^8.5.1",
+    "@storybook/addon-links": "^8.5.1",
+    "@storybook/addon-viewport": "^8.5.1",
+    "@storybook/nextjs": "^8.5.1",
+    "@storybook/react": "^8.5.1",
     "@storybook/testing-library": "^0.2.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -59,7 +59,7 @@
     "cspell": "^8.17.2",
     "danger": "^12.3.3",
     "eslint": "^8.57.0",
-    "eslint-plugin-storybook": "^0.8.0",
+    "eslint-plugin-storybook": "^0.11.2",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -72,7 +72,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
-    "storybook": "^8.1.0-alpha.7",
+    "storybook": "^8.5.1",
     "ts-jest": "^28.0.3",
     "turbo": "latest"
   },
